add list files to openapi
